--- a/index.html
+++ b/index.html
@@ -121,9 +121,8 @@
                        
                         <button class="myButton" style="margin-top: 40px;" >Download Resume</button>
                     </a>
-                     <a href="AyushRaj__data.pdf" target="_blank">
-                             <button class="myButton" style="margin-top: 40px;">View Resume</button>
-                     </a>
+                    <!--new thing get added-->
+                     <a href="class10.html" class="myButton" target="_blank">See Credential</a>
                     <button style="margin-top: 40px; margin-left: 20px;" class="myButton" onclick="scrollToProject()">My Projects</button>
                 </div>
             </div>
